fix: overflow mouseover, and responsive issues

--- a/static/css/rtcbox.css
+++ b/static/css/rtcbox.css
@@ -142,7 +142,7 @@
 	opacity: 1;
 }
 
-@media (max-width: 1500px) {
+@media (max-width: 1600px) {
 	 /* #editorcontainerbox {
 		flex-direction: column;
 	} */
@@ -175,23 +175,30 @@
 	}
 }
 
-@media (min-width: 1500px) {
+@media (min-width: 1600px) {
 	#rtcbox.active{
 		display: block;
-		position: relative;
+		position: absolute;
 		left: 0;
 		top: 0;
 	}
 }
 
-
 .txt_shareLink{
 	background: #eee;
-    padding: 2px 10px;
-    margin: 0 4px;
-    color: black;
-    float: right;
-    border: 1px solid;
-    border-radius: 3px;
-    margin-top: 20px;
+	padding: 0 10px;
+	margin: 0 4px;
+	color: black;
+	float: right;
+	border: 1px solid;
+	border-radius: 3px;
+	float: right;
+}
+
+#chattext .videoIcon{
+	width: 17px;
+	display: inherit;
+	float: left;
+	margin: 2px 6px 0 0;
+	height: 17px;
 }
